feat(commande): refonte du cycle de vie — acceptation fournisseur, expédition, paiement différé, stock
Nouveau cycle complet, aucun mouvement de fonds avant confirmation de
réception par le porteur :

  EN_ATTENTE_VALIDATION -> (admin valide, aucun débit)
  EN_ATTENTE_ACCEPTATION -> (fournisseur accepte/refuse avec motif)
  ACCEPTEE -> (fournisseur expédie, facture obligatoire)
  EXPEDIEE -> (porteur confirme réception, ou ouvre un litige)
  LIVREE -> (admin exécute le paiement, mouvement de fonds unique)
  PAYEE

- CommandeTransactionHelper simplifié : un seul executerPaiement()
  (débit wallet projet -> crédit wallet fournisseur direct), plus de
  séquestre en deux temps ni de remboursement (l'argent ne bouge
  jamais avant que tout le monde ait confirmé)
- Litige : arbitrage en faveur du porteur -> ANNULEE sans aucune
  opération wallet (les fonds n'ont jamais été débités)
- Stock optionnel par article (ArticleFournisseur.stock, null =
  illimité) : décrémenté à la commande, restauré si refus/rejet/litige
  perdu par le fournisseur
- Au paiement : notifie + email porteur/investisseurs/fournisseur avec
  la facture, et copie automatiquement la facture dans les Documents
  du projet (uploads/documents, servi par ProjetDocumentFileController
  avec son propre contrôle d'accès)
- V32 : renomme date_livraison -> date_expedition, ajoute
  date_acceptation/date_paiement/motif_refus sur commandes et stock
  sur articles_fournisseur